src/test/deca/context/invalid/sansObj/decl-string.deca
// Description:
//    Déclaration d'une variable string
//
// Résultat:
//type non défini
{
    string a;
}